--- a/telegrambottest/nbproject/project.properties
+++ b/telegrambottest/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=telegrambottest
+application.vendor=bauke_000
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,11 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/telegrambottest.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.telegrambots-3.5-jar-with-dependencies.jar=C:\\Users\\bauke_000\\Desktop\\telegrambots-3.5-jar-with-dependencies.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.telegrambots-3.5-jar-with-dependencies.jar}
 # Space-separated list of extra javac options
