--- a/bigmovie/nbproject/project.properties
+++ b/bigmovie/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/bigmovie.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\Users\\emiel\\Downloads\\mysql-connector-java-5.1.45-bin.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar-1=C:\\Users\\sjoer\\Desktop\\HBO Sjoerd Bosma\\Jaar 2\\Project_BigMovie\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
